pulling form maven now

--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -1,4 +1,5 @@
-self: play -> lombok 0.10.0-RC1
+self: play -> lombok 0.10.0-RC3
 
 require:
     - play
+    - org.projectlombok -> lombok 0.10.0-RC3
