Add lombok jar from maven as dependency

--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -1,4 +1,6 @@
-self: play.modules -> lombok 1.2.3
+self: github.marekpiechut -> lombok 1.2.4
 
 require:
     - play
+    - org.projectlombok -> lombok [0.10,):
+    
